more work on events page, added simple install page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/wedgeio/wedge">View on GitHub</a>
 
-          <h1 id="project_title">{{ site.name }}</h1>
+          <h1 id="project_title"><a href="/">{{ site.name }}</a></h1>
           <h2 id="project_tagline">{{ site.description }}</h2>
 
         </header>
